After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 797241 - splitmuxsink: does not link with audio-only encoders as muxer
splitmuxsink: does not link with audio-only encoders as muxer
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-10-03 12:17 UTC by Peter Körner
Modified: 2018-10-03 21:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
supposed patch (3.98 KB, patch)
2018-10-03 14:22 UTC, Peter Körner
none Details | Review
updated patch (4.15 KB, patch)
2018-10-03 14:43 UTC, Peter Körner
committed Details | Review

Description Peter Körner 2018-10-03 12:17:24 UTC
~ gst-launch-1.0 audiotestsrc is-live=true ! audio/x-raw,format=S24LE,rate=48000,channels=1 ! sm.audio_0  splitmuxsink name=sm muxer="wavenc ! filesink" max-size-time=2000000000

(gst-launch-1.0:8450): GStreamer-CRITICAL **: 14:16:57.169: gst_element_request_pad: assertion 'templ != NULL' failed
WARNING: erroneous pipeline: could not link audiotestsrc0 to sm, sm can't handle caps audio/x-raw, format=(string)S24LE, rate=(int)48000, channels=(int)1


14:11 <       MaZderMind > it reproducibly triggers an assertation error with wavenc and flacenc
14:11 <            slomo > MaZderMind: yes, and that part is easy to fix. not sure if there's more after it :)
14:12 <            slomo > want to try your luck fixing it? basically it currently assumes that there are sink_%u request pads
14:12 <            slomo > should get another code path that handles sink always pads too
Comment 2 Peter Körner 2018-10-03 14:22:42 UTC
Created attachment 373832 [details] [review]
supposed patch
Comment 3 Peter Körner 2018-10-03 14:43:42 UTC
Created attachment 373834 [details] [review]
updated patch

added an else-case to the pad-presence condition as suggested by slomo on irc
Comment 4 Sebastian Dröge (slomo) 2018-10-03 20:17:12 UTC
Review of attachment 373834 [details] [review]:

A couple of typos, but I'll fix them when merging. Thanks a lot, this change is very useful :)
Comment 5 Sebastian Dröge (slomo) 2018-10-03 20:25:23 UTC
commit 4b570026aa2e674d5a60dae114cd5cf73767312a (HEAD -> master, origin/master, origin/HEAD)
Author: Peter Körner <git@mazdermind.de>
Date:   Wed Oct 3 16:17:22 2018 +0200

    splitmuxsink: accept pads named 'sink' on the muxer, handle static pads as well
    
    https://bugzilla.gnome.org/show_bug.cgi?id=797241
Comment 6 Tim-Philipp Müller 2018-10-03 21:40:27 UTC
Very nice!