splitmuxsink: accept pads named 'sink' on the muxer, handle static pads as well

https://bugzilla.gnome.org/show_bug.cgi?id=797241